deploy/homelab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-probe
  labels:
    app.sullylab.de/name: test-probe
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
