deploy/homelab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-probe
  namespace: test-probe
spec:
  selector:
    app.kubernetes.io/name: test-probe
  ports:
    - name: http
      port: 80
      targetPort: http
